# makeprime

./: 16807-formatted.txt  CMakeLists.txt  LICENSE  README.md  awk-command.txt  main.cpp  prime.txt  run_program.sh  twin-1000.txt
cmake/: FetchMillerRabin.cmake
go/: attribution.txt  makeprime.go
src/: gmp_mr.cpp  gmp_mr.hpp  main.cpp  prime_gen.cpp
